memo/sample/mysql-svc-read.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-read
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      name: mysql
  selector:
    app: mysql
