memo/sample/mattermost-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mattermost
spec:
  rules:
    - host: chat.192.168.64.3.nip.io
      http:
        paths:
          - backend:
              serviceName: mattermost
              servicePort: 8065
